# thesis_mlops

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: cd-dev.yaml  cd-prod.yaml  cd.yaml  ci.yaml  inference-dev.yaml  inference-prod.yaml  inference.yaml
src/config/: modelling.py
src/data/: extraction.py  preprocessing.py
src/deployment/: deploy.py
src/iac/: main.tf  outputs.tf  variables.tf
src/iac/dev/: main.tf  outputs.tf  tfplan  variables.tf
src/iac/prod/: main.tf  outputs.tf  variables.tf
src/inference/: inference.py
src/models/: model_definitions.py  model_registry.py  train_model.py
src/training/: train.py
src/utils/: aws.py
tests/: test_data.py  test_inference.py  test_models.py
